--- a/index.html
+++ b/index.html
@@ -34,23 +34,24 @@
             <img src="Metasploit--Streamline-Simple-Icons.svg" alt="Metasploit Logo" class="sidebar-icon" width="35" height="35" loading="lazy">
             <img src="nmap.svg" alt="Nmap Logo" class="sidebar-icon" width="35" height="35" loading="lazy">
             <img src="hacker-solid.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali3.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali4.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali5.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali6.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali7.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali11.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali9.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali10.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali12.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali13.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali14.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali15.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali16.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali17.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali18.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali19.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
-            <img src="Kali20.svg" alt="Kali Icon 3" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali3.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali4.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali5.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali6.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali7.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali8.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali9.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali10.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali11.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali12.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali13.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali14.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali15.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali16.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali17.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali18.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali19.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
+            <img src="kali20.svg" alt="Hacker Icon" class="sidebar-icon" width="35" height="35" loading="lazy">
             
             
         </div>
